# CarinaDB

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  pom.xml  test_full_link.sh
benchmarks/: generate_charts.py  run_hnswlib.py
carina-engine/: CMakeLists.txt  pom.xml
carina-engine/include/carina/engine/: carina_c_api.h  carina_engine.hpp
carina-engine/include/carina/engine/blob/: blob_pointer.hpp  blob_reader.hpp  blob_writer.hpp
carina-engine/include/carina/engine/cache/: block_cache.hpp
carina-engine/include/carina/engine/compaction/: compaction_comparator.hpp  compactor.hpp  merge_entry.hpp
carina-engine/include/carina/engine/index/hnsw/: hnsw_index.hpp  hnsw_node.hpp
carina-engine/include/carina/engine/math/: vector_math.hpp
carina-engine/include/carina/engine/memtable/: arena.hpp  memtable.hpp  node_accessor.hpp  offheap_skiplist.hpp
carina-engine/include/carina/engine/sstable/: block_builder.hpp  footer.hpp  sstable_builder.hpp  sstable_reader.hpp  sstable_scanner.hpp
carina-engine/include/carina/engine/wal/: wal.hpp
carina-engine/src/: carina_c_api.cpp
carina-engine/src/main/java/com/jiashi/db/engine/: CarinaEngine.java
carina-engine/src/main/java/com/jiashi/db/engine/math/: VectorMath.java
carina-engine/src/main/java/com/jiashi/db/engine/memtable/: Arena.java  NodeAccessor.java  OffHeapSkipList.java
carina-engine/src/main/java/com/jiashi/db/engine/sstable/: SSTableBuilder.java
carina-engine/src/test/java/com/jiashi/db/engine/: CompactionBenchmark.java  VectorPipelineCorrectnessTest.java  VectorSearchBenchmark.java
(+27 files in other folders)
